--- a/Site/HTML/aboutus.css
+++ b/Site/HTML/aboutus.css
@@ -1,36 +1,66 @@
 body{
-	background-color: white;
+	background-color: rgb(70,50,230);
 	background-image: url("AboutUs.png");
 	background-repeat: no-repeat;
 	background-size: cover;
-	
+	width: 100%;
+	height: 100%;
+	margin: 0px;
+	position: fixed;
 }
 
 .header1 {
 	width: 100%;
-	height: 60px;
+	height: 150px;
 	background-color: rgb(173,216,230);
 	padding: 0px;
 	border: 0px;
 	margin: 0px;
+	float: top;
+	overflow: hidden;
 }
 
 .header1 h1{
-	padding: 14px 15px;
+	text-align: left;
+	font-size: 100px;
+	padding: 17px 25px;
+	font-family: Sans-serif;
+	border: 0px;
+	margin: 0px;
 }
 
 .header2 {
-	width: 100%;
-	height: 40px;
-	background-color: blue;
 	padding: 0px;
+	border: 0px;
+	margin: 0px;
+	width: 100%;
+	height: 50px;
+	background-color: rgb(70,50,230);
+	overflow: hidden;
+}
+
+.header2 h3{
+	font-size: 40px;
+	align-self: left;
+	color: white;
+	padding: 0px 20px;
 	border: 0px;
 	margin: 0px;
 }
 
 .text{
 	color: black;
-	font-size: 20px;
+	font-size: 40px;
 	text-align: center;
-	padding-top: 200px;
+	padding-top: 170px;
+	overflow: hidden;
+}
+
+.cr {
+	color: red;
+	position: fixed;
+	bottom: 10px;
+	left: 46%;
+	font-size: 20px;
+	overflow: hidden;
 }
