--- a/Site/HTML/aboutus.css
+++ b/Site/HTML/aboutus.css
@@ -12,7 +12,7 @@ body{
 .header1 {
 	width: 100%;
 	height: 150px;
-	background-color: rgb(173,216,230);
+	background-color: rgb(210,105,30);
 	padding: 0px;
 	border: 0px;
 	margin: 0px;
@@ -27,6 +27,7 @@ body{
 	font-family: Sans-serif;
 	border: 0px;
 	margin: 0px;
+	color: white;
 }
 
 .header2 {
@@ -35,7 +36,7 @@ body{
 	margin: 0px;
 	width: 100%;
 	height: 50px;
-	background-color: rgb(70,50,230);
+	background-color: green;
 	overflow: hidden;
 }
 
