--- a/Site/HTML/style.css
+++ b/Site/HTML/style.css
@@ -92,9 +92,13 @@
 	height: 35%;
 	border: solid;
 	border-color: white;
+	background-color: gray;
 	color: white;
 	position: absolute;
 	right: 7em;
 	top: 20em;
-	display: block;
+}
+
+#na {
+	display: none;
 }
