--- a/Site/HTML/aboutus.css
+++ b/Site/HTML/aboutus.css
@@ -59,10 +59,7 @@ body{
 
 .cr {
 	color: red;
-	position: fixed;
-	top: 20px;
-	bottom: 10px;
-	left: 46%;
-	font-size: 20px;
+	position: bottom;
+	padding-bottom: 20px;
 	overflow: hidden;
 }
