--- a/Site/HTML/Website/public/style.css
+++ b/Site/HTML/Website/public/style.css
@@ -89,8 +89,8 @@
 .show {display:block;}
 
 .popup {
-	width: 20%;
-	height: 35%;
+	width: 23%;
+	height: 40%;
 	border: solid;
 	border-color: white;
 	background-color: gray;
@@ -98,6 +98,8 @@
 	position: absolute;
 	right: 7em;
 	top: 20em;
+	overflow: auto;
+	padding: 10px;
 }
 
 #na {
